tests/NormalTests/paczka1/fuzzy1/25683287.err
Error in line 1: LvPv A756 52,3
Error in line 11: srhfK4 A499 0,8
Error in line 6: LvPv S775 11,7
Error in line 27: 49JeGrfb S775 84,7
Error in line 12: srhfK4 A972 46,9
Error in line 30: 49JeGrfb A972 48,6
Error in line 32: uB53hTH A499 49,1
Error in line 35: 49JeGrfb A756 80,2
Error in line 34: srhfK4 S775 81,3
